--- a/src/KubernetesDemo/KubernetesDemo.csproj
+++ b/src/KubernetesDemo/KubernetesDemo.csproj
@@ -14,6 +14,10 @@
     <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
     <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
     -->
+    <PackageReference Include="Amazon.CDK.AWS.IAM" Version="1.66.0" />
+    <PackageReference Include="Amazon.CDK.AWS.EC2" Version="1.66.0" />
+    <PackageReference Include="Amazon.CDK.AWS.EKS" Version="1.66.0" />
+    <PackageReference Include="Amazon.CDK.AWS.ECR" Version="1.66.0" />
   </ItemGroup>
 
 </Project>
